# nanorender-opengl

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
shaders/: ambient_lighting.frag  debug.frag  debug.vert  filled_triangle.frag  filled_triangle.vert  flat_diffuse_lighting.frag  flat_diffuse_lighting.geom  flat_diffuse_lighting.vert  triangle_bounds.frag  triangle_bounds.geom  ui.frag  ui.vert  wireframe.frag  wireframe.vert
src/: camera.cpp  camera.h  debug_renderer.cpp  debug_renderer.h  filled_triangle_renderer.cpp  filled_triangle_renderer.h  gpu_ui_renderer.cpp  gpu_ui_renderer.h  lighting.cpp  lighting.h  lighting_renderer.cpp  lighting_renderer.h  main.cpp  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  microui_atlas.c  microui_atlas.h  projection.cpp  projection.h  shader_program.cpp  shader_program.h  transform_controls.cpp  transform_controls.h  triangle_bounds_renderer.cpp  triangle_bounds_renderer.h
